--- a/Web_Crawling.ipynb
+++ b/Web_Crawling.ipynb
@@ -6,7 +6,7 @@
       "name": "Web Crawling",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMn8NHPVRM/CsZe3u5MgoYO",
+      "authorship_tag": "ABX9TyNR1EKklH8bJr3jb2xX2rHu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,21 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/saffarizadeh/INSY4054/blob/main/Web_Crawling.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UmAPSvRc8huq"
+      },
+      "source": [
+        "<img src=\"http://saffarizadeh.com/Logo.png\" width=\"300px\"/>\n",
+        "\n",
+        "# *INSY 4054: Emerging Technologies*\n",
+        "\n",
+        "# **Web Crawling**\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -53,7 +68,7 @@
       "source": [
         "import requests"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +80,7 @@
         "url = 'https://www.marquette.edu/'\n",
         "response = requests.get(url)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +133,7 @@
       "source": [
         "response.headers"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -158,7 +173,7 @@
       "source": [
         "response.headers['Content-Type']"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -199,7 +214,7 @@
       "source": [
         "response.headers.get('content-type')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -250,7 +265,7 @@
       "source": [
         "response.cookies.get_dict()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,7 +310,7 @@
         "\n",
         "print(response.text)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,7 +349,7 @@
         "headers = {'user-agent': 'my-app/0.0.1'}\n",
         "response = requests.get(url, headers=headers)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +379,7 @@
       "source": [
         "requests.get('https://github.com/', timeout=0.1)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -409,7 +424,7 @@
         "url = 'https://www.marquette.edu/dsakjhdasiudasjk'\n",
         "response = requests.get(url)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -424,7 +439,7 @@
       "source": [
         "response.status_code"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -452,7 +467,7 @@
       "source": [
         "requests.codes.ok"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +495,7 @@
       "source": [
         "response.status_code == requests.codes.ok"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -515,7 +530,7 @@
       "source": [
         "# response.raise_for_status()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -555,7 +570,7 @@
         "print(type(response.text)) # returns text content\n",
         "print(type(response.content)) # works for text and any other content type such as image"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,7 +608,7 @@
       "source": [
         "response = requests.get('https://api.github.com/events')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -604,7 +619,7 @@
       "source": [
         "json_resp = response.json()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -639,7 +654,7 @@
       "source": [
         "payload = {'key1': 'value1', 'key2': 'value2'}"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -650,7 +665,7 @@
       "source": [
         "response = requests.post(\"https://httpbin.org/post\", data=payload)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -667,7 +682,7 @@
         "\n",
         "# OR print(response.json())"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -716,7 +731,7 @@
       "source": [
         "import json"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -727,7 +742,7 @@
       "source": [
         "payload = {'key1': 'value1', 'key2': 'value2'}"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -743,7 +758,7 @@
       "source": [
         "json.dumps(payload) # to convert the dictonary to string"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -770,7 +785,7 @@
       "source": [
         "response = requests.post('https://httpbin.org/post', data=json.dumps(payload))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -785,7 +800,7 @@
       "source": [
         "print(response.text)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -842,7 +857,7 @@
         "import requests\n",
         "from lxml import html"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -854,7 +869,7 @@
         "url = 'https://www.marquette.edu/'\n",
         "response = requests.get(url)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -865,7 +880,7 @@
       "source": [
         "tree = html.fromstring(response.content) # Note that we use .content not .text"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -931,7 +946,7 @@
       "source": [
         "from bs4 import BeautifulSoup"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -942,7 +957,7 @@
       "source": [
         "soup = BeautifulSoup(response.content, 'lxml')"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -976,7 +991,7 @@
         "for link in all_links:\n",
         "  link_labels.append(link.text)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1009,7 +1024,7 @@
         "for link in all_links:\n",
         "  link_urls.append(link.get('href'))"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1040,7 +1055,7 @@
       "source": [
         "label_url_pairs = list(zip(link_labels, link_urls))"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1066,7 +1081,7 @@
         "    if url[:4] == \"http\":\n",
         "        cleaned_label_url_pairs.append((label, url))"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1136,7 +1151,7 @@
         "\n",
         "fixed_image_urls = [requests.compat.urljoin(BASE_URL, image_url) for image_url in image_urls]"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1193,7 +1208,7 @@
       "source": [
         "image_alt_pairs = list(zip(fixed_image_urls, image_alts))"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1204,7 +1219,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1221,7 +1236,7 @@
         "df = pd.DataFrame(image_alt_pairs, columns={\"image_url\", \"image_alt\"})\n",
         "df"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1453,7 +1468,7 @@
       "source": [
         "import os"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1465,7 +1480,7 @@
         "directory = \"images\"\n",
         "os.makedirs(directory, exist_ok=True) # With exist_ok=True, we will not get an error if the directory already exists"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1496,7 +1511,7 @@
         "      f.write(image_response.content)\n",
         "  image_counter = image_counter + 1"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1520,7 +1535,7 @@
         "import tensorflow_hub as hub\n",
         "import numpy as np"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1557,7 +1572,7 @@
         "      image_names.append(filename)\n",
         "image_arrays = np.array(images_list)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1572,7 +1587,7 @@
       "source": [
         "image_arrays.shape"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1609,7 +1624,7 @@
         "])\n",
         "inception_model.build([None, 299, 299, 3])  # Batch input shape."
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1629,7 +1644,7 @@
       "source": [
         "output = inception_model(image_arrays)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1653,7 +1668,7 @@
       "source": [
         "output.shape"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1689,7 +1704,7 @@
         "classes_text = classes_response.text\n",
         "classes = classes_text.split('\\n')"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1709,7 +1724,7 @@
       "source": [
         "num = 20"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1726,7 +1741,7 @@
         "# Show an image from the image_arrays\n",
         "tf.keras.preprocessing.image.array_to_img(image_arrays[num])"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1772,7 +1787,7 @@
         "top_labels = [(classes[index], round(result[index].numpy()*100, 2)) for index in list(np.argsort(-1*result))]\n",
         "print(top_labels[:5])"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1808,7 +1823,7 @@
         "  labels.append(label)\n",
         "  confidences.append(confidence)"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1834,7 +1849,7 @@
         "df_final = pd.DataFrame({\"image\": image_names, \"label\": labels, \"confidence\": confidences})\n",
         "df_final"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2071,7 +2086,7 @@
       "source": [
         "df_final.to_excel(\"classified_images.xlsx\")"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     }
   ]
