--- a/AI_Project_Student_Version.ipynb
+++ b/AI_Project_Student_Version.ipynb
@@ -6,7 +6,7 @@
       "name": "AI Project - Student Version",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO1SP/qYvrz5uxmc5buM+O2",
+      "authorship_tag": "ABX9TyNEvnZABejdVa3vxjFNjH5Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,21 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/saffarizadeh/INSY4054/blob/main/AI_Project_Student_Version.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xVph6jAw8zGq"
+      },
+      "source": [
+        "<img src=\"http://saffarizadeh.com/Logo.png\" width=\"300px\"/>\n",
+        "\n",
+        "# *INSY 4054: Emerging Technologies*\n",
+        "\n",
+        "# **AI Project**\n",
+        "\n",
+        "---"
       ]
     },
     {
