--- a/Text_Classification.ipynb
+++ b/Text_Classification.ipynb
@@ -7,7 +7,7 @@
       "name": "Text Classification",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNh4xHccpJuqziqgt8UUEb1",
+      "authorship_tag": "ABX9TyNcMiHxymWKVhcWZ14oQRiP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,21 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/saffarizadeh/INSY4054/blob/main/Text_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eNxXJclG9FuC"
+      },
+      "source": [
+        "<img src=\"http://saffarizadeh.com/Logo.png\" width=\"300px\"/>\n",
+        "\n",
+        "# *INSY 4054: Emerging Technologies*\n",
+        "\n",
+        "# **Trained Models and Transfer Learning**\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -50,7 +65,7 @@
         "import tensorflow_hub as hub\n",
         "import tensorflow_datasets as tfds"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +125,7 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +159,7 @@
         "              loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -180,7 +195,7 @@
         "                    validation_data=validation_data.batch(512),\n",
         "                    verbose=1)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +237,7 @@
       "source": [
         "model.evaluate(test_data.batch(512), verbose=2)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +268,7 @@
       "source": [
         "new_reviews = [\"This was a great movie\", \"This was a very bad movie\"]"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -264,7 +279,7 @@
       "source": [
         "new_reviews_array = np.array(new_reviews)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -279,7 +294,7 @@
       "source": [
         "model(new_reviews_array)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
