--- a/Object_Detection.ipynb
+++ b/Object_Detection.ipynb
@@ -6,7 +6,7 @@
       "name": "Object Detection",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMDOVNSWEdggJMaH8MSo7pI",
+      "authorship_tag": "ABX9TyMw7KcIBkn24v6t0Hnrovk2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,23 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/saffarizadeh/INSY4054/blob/main/Object_Detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pVRYUE-d9TDw"
+      },
+      "source": [
+        "<img src=\"http://saffarizadeh.com/Logo.png\" width=\"300px\"/>\n",
+        "\n",
+        "# *INSY 4054: Emerging Technologies*\n",
+        "\n",
+        "# **Trained Models and Transfer Learning**\n",
+        "\n",
+        "Instructor: Dr. Kambiz Saffarizadeh\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -52,7 +69,7 @@
         "from PIL import ImageFont\n",
         "from PIL import ImageDraw"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -67,7 +84,7 @@
       "source": [
         "detector = hub.load(\"https://tfhub.dev/google/faster_rcnn/openimages_v4/inception_resnet_v2/1\").signatures['default']"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +114,7 @@
       "source": [
         "!wget https://upload.wikimedia.org/wikipedia/commons/6/60/Naxos_Taverna.jpg"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +143,7 @@
       "source": [
         "image_d = tf.keras.preprocessing.image.load_img('Naxos_Taverna.jpg', target_size=(856, 1280))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +154,7 @@
       "source": [
         "image_array = tf.keras.preprocessing.image.img_to_array(image_d, dtype='uint8')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -148,7 +165,7 @@
       "source": [
         "image_array_float = image_array[tf.newaxis, ...] / 255.0"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +176,7 @@
       "source": [
         "image_array_float = image_array_float.astype('float32') # I seprated these steps to make sure you can follow what we are doing here"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,7 +187,7 @@
       "source": [
         "image_tensor = tf.convert_to_tensor(image_array_float)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -181,7 +198,7 @@
       "source": [
         "detector_output = detector(image_tensor)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +209,7 @@
       "source": [
         "result = {key:value.numpy() for key,value in detector_output.items()}"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +294,7 @@
         "      np.copyto(image, np.array(image_pil))\n",
         "  return image"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -301,7 +318,7 @@
         "plt.grid(False)\n",
         "plt.imshow(image_with_boxes)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
