--- a/Inception_V3.ipynb
+++ b/Inception_V3.ipynb
@@ -6,7 +6,7 @@
       "name": "Inception V3",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPvkr2UV4EfBZFUdMuLD5Et",
+      "authorship_tag": "ABX9TyNHAAMWjbSZM8ExQLlvseMC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,23 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/saffarizadeh/INSY4054/blob/main/Inception_V3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MPvIQsKt9pJz"
+      },
+      "source": [
+        "<img src=\"http://saffarizadeh.com/Logo.png\" width=\"300px\"/>\n",
+        "\n",
+        "# *INSY 4054: Emerging Technologies*\n",
+        "\n",
+        "# **Trained Models and Transfer Learning**\n",
+        "\n",
+        "Instructor: Kambiz Saffarizadeh\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -46,7 +63,7 @@
         "import pandas as pd\n",
         "import tensorflow_hub as hub"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -60,7 +77,7 @@
         "])\n",
         "inception_model.build([None, 299, 299, 3])  # Batch input shape."
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +110,7 @@
       "source": [
         "!wget https://images.newscientist.com/wp-content/uploads/2020/09/22145012/big-frog-eyes.jpg"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +148,7 @@
       "source": [
         "image_d = tf.keras.preprocessing.image.load_img('big-frog-eyes.jpg', target_size=(299, 299))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +164,7 @@
       "source": [
         "image_d"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -182,7 +199,7 @@
       "source": [
         "image_array = tf.keras.preprocessing.image.img_to_array(image_d) / 255.0"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,7 +214,7 @@
       "source": [
         "image_array.shape"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -235,7 +252,7 @@
         "\n",
         "image_array2 = image_array[tf.newaxis, ...]"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -255,7 +272,7 @@
       "source": [
         "output = inception_model(image_array2)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -270,7 +287,7 @@
       "source": [
         "output.shape"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +325,7 @@
       "source": [
         "np.argmax(output.numpy())"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -350,7 +367,7 @@
         "classes = requests.get('https://storage.googleapis.com/download.tensorflow.org/data/ImageNetLabels.txt').text.split('\\n')\n",
         "classes[np.argmax(output.numpy())]"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
