--- a/Food_Classifier.ipynb
+++ b/Food_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "Food Classifier",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMR6CV4dutZE5BaV8nIjMJI",
+      "authorship_tag": "ABX9TyNaBOi54X6K/g1clDdOgEw/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,23 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/saffarizadeh/INSY4054/blob/main/Food_Classifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UdQinAfJ9t7O"
+      },
+      "source": [
+        "<img src=\"http://saffarizadeh.com/Logo.png\" width=\"300px\"/>\n",
+        "\n",
+        "# *INSY 4054: Emerging Technologies*\n",
+        "\n",
+        "# **Trained Models and Transfer Learning**\n",
+        "\n",
+        "Instructor: Kambiz Saffarizadeh\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -46,7 +63,7 @@
         "import pandas as pd\n",
         "import tensorflow_hub as hub"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -61,7 +78,7 @@
       "source": [
         "food_model = hub.KerasLayer('https://tfhub.dev/google/aiy/vision/classifier/food_V1/1')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +108,7 @@
       "source": [
         "!wget https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/2KL6JYQYH4I6REYMIWBYVUGXPI.jpg"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +137,7 @@
       "source": [
         "image_d = tf.keras.preprocessing.image.load_img('2KL6JYQYH4I6REYMIWBYVUGXPI.jpg', target_size=(224, 224))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +153,7 @@
       "source": [
         "image_d"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,7 +178,7 @@
       "source": [
         "image_array = tf.keras.preprocessing.image.img_to_array(image_d) / 255.0"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +193,7 @@
       "source": [
         "image_array.shape"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,7 +217,7 @@
       "source": [
         "output = food_model(image_array[tf.newaxis, ...])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +228,7 @@
       "source": [
         "food_labels = pd.read_csv('https://www.gstatic.com/aihub/tfhub/labelmaps/aiy_food_V1_labelmap.csv', index_col='id')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +243,7 @@
       "source": [
         "np.argsort(-1*output)[0] # Sorting the output from highest to lowest"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,17 +262,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "x2CSytoyodz4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 450
         },
-        "id": "x2CSytoyodz4",
         "outputId": "3292c515-6e59-4696-c63c-1d16d981c3cc"
       },
       "source": [
         "food_labels.iloc[np.argsort(-1*output)[0]]"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
