--- a/Text_Classification.ipynb
+++ b/Text_Classification.ipynb
@@ -7,7 +7,7 @@
       "name": "Text Classification",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNcMiHxymWKVhcWZ14oQRiP",
+      "authorship_tag": "ABX9TyMZyx6zV3nLhz6ZUwEgNhIr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,8 @@
         "# *INSY 4054: Emerging Technologies*\n",
         "\n",
         "# **Trained Models and Transfer Learning**\n",
+        "\n",
+        "Instructor: Kambiz Saffarizadeh\n",
         "\n",
         "---"
       ]
