--- a/Working_with_Spreadsheets.ipynb
+++ b/Working_with_Spreadsheets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMecIpiXaUJqVktrnjS0nHV",
+      "authorship_tag": "ABX9TyPb5Nvd4DYwS543Le83cni9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,8 @@
         "# *INSY 4054: Emerging Technologies*\n",
         "\n",
         "# **Working with Spreadsheets**\n",
+        "\n",
+        "Instructor: Dr. Kambiz Saffarizadeh\n",
         "\n",
         "---"
       ]
