--- a/Web_Crawling.ipynb
+++ b/Web_Crawling.ipynb
@@ -6,7 +6,7 @@
       "name": "Web Crawling",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNR1EKklH8bJr3jb2xX2rHu",
+      "authorship_tag": "ABX9TyM7yfeV9UjhYbuGwG1gEgyz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,8 @@
         "# *INSY 4054: Emerging Technologies*\n",
         "\n",
         "# **Web Crawling**\n",
+        "\n",
+        "Instructor: Dr. Kambiz Saffarizadeh\n",
         "\n",
         "---"
       ]
