--- a/Text_Classification.ipynb
+++ b/Text_Classification.ipynb
@@ -7,7 +7,7 @@
       "name": "Text Classification",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMZyx6zV3nLhz6ZUwEgNhIr",
+      "authorship_tag": "ABX9TyNhSNFTdeP6YqTv82zPYIvj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "\n",
         "# **Trained Models and Transfer Learning**\n",
         "\n",
-        "Instructor: Kambiz Saffarizadeh\n",
+        "Instructor: Dr. Kambiz Saffarizadeh\n",
         "\n",
         "---"
       ]
