--- a/Food_Classifier.ipynb
+++ b/Food_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "Food Classifier",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNaBOi54X6K/g1clDdOgEw/",
+      "authorship_tag": "ABX9TyMBNp7uU3uzH7jq5HLgEzTx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "\n",
         "# **Trained Models and Transfer Learning**\n",
         "\n",
-        "Instructor: Kambiz Saffarizadeh\n",
+        "Instructor: Dr. Kambiz Saffarizadeh\n",
         "\n",
         "---"
       ]
