--- a/Inception_V3.ipynb
+++ b/Inception_V3.ipynb
@@ -6,7 +6,7 @@
       "name": "Inception V3",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNHAAMWjbSZM8ExQLlvseMC",
+      "authorship_tag": "ABX9TyOf65FK9f+/Lc54H4UqZ46I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "\n",
         "# **Trained Models and Transfer Learning**\n",
         "\n",
-        "Instructor: Kambiz Saffarizadeh\n",
+        "Instructor: Dr. Kambiz Saffarizadeh\n",
         "\n",
         "---"
       ]
