--- a/Text_Classification.ipynb
+++ b/Text_Classification.ipynb
@@ -7,7 +7,7 @@
       "name": "Text Classification",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNhSNFTdeP6YqTv82zPYIvj",
+      "authorship_tag": "ABX9TyNbPvraRKCnHMbgKgIzL38d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
         "import tensorflow_hub as hub\n",
         "import tensorflow_datasets as tfds"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -109,25 +109,31 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "GbZbOIpKrCk_"
+      },
+      "source": [
+        "model = tf.keras.models.Sequential([\n",
+        "    hub.KerasLayer(\"https://tfhub.dev/google/nnlm-en-dim50/2\", input_shape=[], dtype=tf.string, trainable=True),\n",
+        "    tf.keras.layers.Dense(16, activation='relu'),\n",
+        "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+        "])"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "GbZbOIpKrCk_",
-        "outputId": "8db1209d-4f83-4427-e673-891dd6ebf274"
+        "id": "A75yXqrJOWq7",
+        "outputId": "b28c0137-f8b0-4e36-a556-0580843bfa29"
       },
       "source": [
-        "hub_layer = hub.KerasLayer(\"https://tfhub.dev/google/nnlm-en-dim50/2\",\n",
-        "                           input_shape=[], dtype=tf.string, trainable=True)\n",
-        "\n",
-        "model = tf.keras.models.Sequential([\n",
-        "    hub_layer,\n",
-        "    tf.keras.layers.Dense(16, activation='relu'),\n",
-        "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
-        "])\n",
-        "\n",
         "model.summary()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,17 +167,8 @@
         "              loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "voPx8ptXB18t"
-      },
-      "source": [
-        ""
-      ]
     },
     {
       "cell_type": "markdown",
@@ -189,7 +186,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Mw-uTKJrGUo",
-        "outputId": "f4ef3b20-ef3a-4886-8224-2527b2304fa6"
+        "outputId": "e65a2bd5-50c9-430f-bc70-4272cbbd6b36"
       },
       "source": [
         "history = model.fit(train_data.shuffle(10000).batch(512),\n",
@@ -197,31 +194,31 @@
         "                    validation_data=validation_data.batch(512),\n",
         "                    verbose=1)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "30/30 [==============================] - 5s 104ms/step - loss: 0.6807 - accuracy: 0.5662 - val_loss: 0.6037 - val_accuracy: 0.7066\n",
+            "30/30 [==============================] - 6s 94ms/step - loss: 0.7195 - accuracy: 0.4935 - val_loss: 0.6675 - val_accuracy: 0.6405\n",
             "Epoch 2/10\n",
-            "30/30 [==============================] - 3s 92ms/step - loss: 0.5607 - accuracy: 0.7597 - val_loss: 0.4973 - val_accuracy: 0.7905\n",
+            "30/30 [==============================] - 3s 84ms/step - loss: 0.6455 - accuracy: 0.6774 - val_loss: 0.5907 - val_accuracy: 0.7493\n",
             "Epoch 3/10\n",
-            "30/30 [==============================] - 3s 92ms/step - loss: 0.4275 - accuracy: 0.8517 - val_loss: 0.3926 - val_accuracy: 0.8448\n",
+            "30/30 [==============================] - 3s 84ms/step - loss: 0.5394 - accuracy: 0.7998 - val_loss: 0.4766 - val_accuracy: 0.8144\n",
             "Epoch 4/10\n",
-            "30/30 [==============================] - 3s 92ms/step - loss: 0.3018 - accuracy: 0.8974 - val_loss: 0.3385 - val_accuracy: 0.8595\n",
+            "30/30 [==============================] - 3s 85ms/step - loss: 0.3964 - accuracy: 0.8742 - val_loss: 0.3776 - val_accuracy: 0.8524\n",
             "Epoch 5/10\n",
-            "30/30 [==============================] - 3s 95ms/step - loss: 0.2172 - accuracy: 0.9326 - val_loss: 0.3145 - val_accuracy: 0.8690\n",
+            "30/30 [==============================] - 3s 84ms/step - loss: 0.2720 - accuracy: 0.9210 - val_loss: 0.3303 - val_accuracy: 0.8645\n",
             "Epoch 6/10\n",
-            "30/30 [==============================] - 3s 94ms/step - loss: 0.1586 - accuracy: 0.9538 - val_loss: 0.3067 - val_accuracy: 0.8735\n",
+            "30/30 [==============================] - 3s 83ms/step - loss: 0.1964 - accuracy: 0.9450 - val_loss: 0.3114 - val_accuracy: 0.8717\n",
             "Epoch 7/10\n",
-            "30/30 [==============================] - 3s 93ms/step - loss: 0.1161 - accuracy: 0.9714 - val_loss: 0.3072 - val_accuracy: 0.8725\n",
+            "30/30 [==============================] - 3s 85ms/step - loss: 0.1421 - accuracy: 0.9618 - val_loss: 0.3052 - val_accuracy: 0.8738\n",
             "Epoch 8/10\n",
-            "30/30 [==============================] - 3s 93ms/step - loss: 0.0845 - accuracy: 0.9827 - val_loss: 0.3132 - val_accuracy: 0.8719\n",
+            "30/30 [==============================] - 3s 83ms/step - loss: 0.1005 - accuracy: 0.9776 - val_loss: 0.3120 - val_accuracy: 0.8730\n",
             "Epoch 9/10\n",
-            "30/30 [==============================] - 3s 92ms/step - loss: 0.0614 - accuracy: 0.9895 - val_loss: 0.3224 - val_accuracy: 0.8699\n",
+            "30/30 [==============================] - 3s 82ms/step - loss: 0.0753 - accuracy: 0.9865 - val_loss: 0.3194 - val_accuracy: 0.8722\n",
             "Epoch 10/10\n",
-            "30/30 [==============================] - 3s 93ms/step - loss: 0.0449 - accuracy: 0.9945 - val_loss: 0.3363 - val_accuracy: 0.8709\n"
+            "30/30 [==============================] - 3s 82ms/step - loss: 0.0503 - accuracy: 0.9937 - val_loss: 0.3308 - val_accuracy: 0.8709\n"
           ],
           "name": "stdout"
         }
@@ -234,17 +231,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qIXqDy1krIUt",
-        "outputId": "13a448a3-96ae-4a72-8121-3429d37407e8"
+        "outputId": "88618c63-10f6-4154-f6a3-acc79db00a66"
       },
       "source": [
         "model.evaluate(test_data.batch(512), verbose=2)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "49/49 - 2s - loss: 0.3633 - accuracy: 0.8579\n"
+            "49/49 - 2s - loss: 0.3598 - accuracy: 0.8558\n"
           ],
           "name": "stdout"
         },
@@ -252,13 +249,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.36330464482307434, 0.8579199910163879]"
+              "[0.3597661852836609, 0.8557599782943726]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 8
         }
       ]
     },
@@ -270,7 +267,7 @@
       "source": [
         "new_reviews = [\"This was a great movie\", \"This was a very bad movie\"]"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -281,7 +278,7 @@
       "source": [
         "new_reviews_array = np.array(new_reviews)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -291,26 +288,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "81af5cfd-f294-4475-e230-9853242d2135"
+        "outputId": "cc2e3061-cdff-492c-fea7-a1ac9e1e8d3d"
       },
       "source": [
         "model(new_reviews_array)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<tf.Tensor: shape=(2, 1), dtype=float32, numpy=\n",
-              "array([[0.9793732 ],\n",
-              "       [0.11797823]], dtype=float32)>"
+              "array([[0.98168576],\n",
+              "       [0.14568348]], dtype=float32)>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 11
         }
       ]
     },
