--- a/Python_Basics_III.ipynb
+++ b/Python_Basics_III.ipynb
@@ -48,7 +48,9 @@
         "\n",
         "# *INSY 4054: Emerging Technologies*\n",
         "\n",
-        "# **Week 2-2:** Python Basics III\n",
+        "# **Python Basics III**\n",
+        "\n",
+        "Instructor: Dr. Kambiz Saffarizadeh\n",
         "\n",
         "---"
       ]
@@ -95,7 +97,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -156,7 +158,7 @@
       "source": [
         ""
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -212,7 +214,7 @@
       "source": [
         "b = a[:2, 1:3]"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -243,7 +245,7 @@
       "source": [
         "b[0, 0] = 77     # b[0, 0] is the same piece of data as a[0, 1]"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -411,7 +413,7 @@
       "source": [
         ""
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -422,7 +424,7 @@
       "source": [
         ""
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -443,7 +445,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -535,7 +537,7 @@
       "source": [
         "test_train = pd.Categorical([\"test\", \"train\", \"test\", \"train\", \"train\", \"train\"])"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -555,7 +557,7 @@
       "source": [
         "table_dict = {'Date': dates, 'Type_of_Learning': test_train, 'Value': s}"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -599,7 +601,7 @@
         "        'oranges': [0, 3, 7, 2]\n",
         "        }"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -610,7 +612,7 @@
       "source": [
         "purchases = pd.DataFrame(data)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -698,7 +700,7 @@
       "source": [
         "df2 = pd.read_csv('http://saffarizadeh.com/ET/purchases.csv')"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -754,7 +756,7 @@
       "source": [
         "df3 = pd.read_json('http://saffarizadeh.com/ET/purchases.json')"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -797,7 +799,7 @@
         "df2['apples'][0] = 999\n",
         "df2.to_csv('new_purchases.csv')"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -808,7 +810,7 @@
       "source": [
         "df3.to_json('new_purchases.json')"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -828,7 +830,7 @@
       "source": [
         "movies_df = pd.read_csv(\"http://saffarizadeh.com/ET/IMDB-Movie-Data.csv\", index_col=\"Title\")"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1163,7 +1165,7 @@
       "source": [
         "prom = movies_df.iloc[1]"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1418,7 +1420,7 @@
       "source": [
         "movies_df['Rating'].plot(kind=\"box\");"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1455,7 +1457,7 @@
       "source": [
         ""
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1466,7 +1468,7 @@
       "source": [
         ""
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1477,7 +1479,7 @@
       "source": [
         ""
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     }
   ]
